# NumericalAnalysis

./: CMakeLists.txt  install.sh  setup.py
cc/: basic.cc  nptest.cc
numcalc/: __init__.py  basic.py  linsolve.py
numcalc/cc/: _basic.cc  _linsolve.cc
python/: np.py
python/numcalc/basic/: __init__.py
scripts/: chapter02_04.py  chapter02_05.py  chapter02_06.py  chapter02_07.py  chapter02_08.py  chapter02_09.py  chapter03_01.py  chapter03_02.py  chapter03_03.py
